@@ -1,3 +1,9 @@
+2018-03-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* sdas/asxxsrc/asout.c
+	* sdas/asxxsrc/sdas.c
+	* sdas/asxxsrc/sdas.h: enable sdasstm8 to emit 24-bit relocation data
+
 2018-03-30 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/valdiag/tests/overflow.c:
